--- a/css/main.css
+++ b/css/main.css
@@ -465,8 +465,13 @@ Screen - Game
   animation: animCoin 750ms steps(1) infinite;
 }
 
+/*
 .game-wrapper,
 #gamecontainer {
   width: 50%;
   float: left;
+}
+*/
+.game-wrapper {
+  display: none;
 }
