--- a/css/main.css
+++ b/css/main.css
@@ -465,6 +465,11 @@ Screen - Game
   animation: animCoin 750ms steps(1) infinite;
 }
 
+canvas {
+  border-top: 4px solid black;
+  border-bottom: 4px solid black;
+}
+
 .game-wrapper,
 #gamecontainer {
   width: 50%;
