--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
 
 body {
   height: 100%;
-  background: linear-gradient(0deg, #ded895 50%, #4ec0ca 50%);
+  background: linear-gradient(0deg, #7fb471 50%, #cee7f9 50%);
 }
 
 @-webkit-keyframes animLand {
